# phantom-fhe

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindGMP.cmake  FindNTL.cmake
doc/: README.md  configuration.md
doc/api-explained/: advanced-features.md
examples/: 3_ckks.cu  CMakeLists.txt  boot_test.cu  bootstrapping.cu  cnn.cu  cnn_2_n_key_30.cu  cnn_2_n_key_34.cu  cnn_depth_30.cu  cnn_depth_34.cu  coeff_add_ctos.cu  coeff_conv.cu  encode_coeffs.cu  eval_conv_bnrelu_debug.cu  parms.cu  resnet_crop_sparse.cu  rotate.cu  run_cnn.cu  test_conv_bl.cu  test_conv_in.cu
include/: boot.h  bootstrapping.cuh  ciphertext.h  ckks.h  cnn_phantom.h  common.h  context.cuh  conv_eval.h  cuda_wrapper.cuh  evaluate.cuh  galois.cuh  phantom.h  plaintext.h  polymath.cuh  secretkey.h  uintmath.cuh
include/boot/: Bootstrapper.cuh  ModularReducer.cuh  Polynomial.cuh  RemezArcsin.cuh  RemezCos.cuh  ckks_evaluator.cuh  utils.cuh
include/host/: encryptionparams.h  globals.h
python/examples/: ckks.py
python/src/: binding.cu
result/: resnet110_cifar10_image0.txt  resnet110_cifar10_image4.txt  resnet110_cifar10_label_0_0  resnet110_cifar10_label_4_4  resnet20_cifar10_image0.txt  resnet20_cifar10_image1.txt  resnet20_cifar10_image2.txt  resnet20_cifar10_image3.txt  resnet20_cifar10_image4.txt  resnet20_cifar10_image5.txt  resnet20_cifar10_image6.txt  resnet20_cifar10_image7.txt  resnet20_cifar10_image8.txt  resnet20_cifar10_image9.txt  resnet20_cifar10_label_0_0  resnet20_cifar10_label_0_9  resnet32_cifar100_image0.txt  resnet32_cifar100_label_0_0  resnet32_cifar10_image0.txt  resnet32_cifar10_label_0_0
src/: CMakeLists.txt  README.md  batchencoder.cu  bootstrapping.cu  ckks.cu  cnn_phantom.cu  context.cu  conv_eval.cu  eval_key_switch.cu  evaluate.cu  polymath.cu  prng.cu  secretkey.cu
src/boot/: Bootstrapper.cu  ModularReducer.cu  ckks_evaluator.cu
src/boot/common/: Choosemax.cu  MinicompFunc.cu  MinicompRemez.cu  Point.cu  PolyUpdate.cu  Polynomial.cu  Remez.cu  RemezApp.cu  func.cu
src/host/: numth.cu
test/: CMakeLists.txt  ckks_bootstrap_test.cu  ckks_encoder_test.cu  ckks_eval_mod_chebyshev_test.cu  context_test.cu  fft_test.cu  numth_is_prime_perf_test.cpp  prng_test.cu
tests/: CMakeLists.txt  add.cu  add_inplace.cu  add_many.cu  add_plain.cu  add_plain_inplace.cu  apply_galois.cu  apply_galois_inplace.cu  bootstrapping_test.cu  ckks_basic_op.cu  ckks_evaluator_test.cu  ckks_muti_parms.cu  conjugate.cu  conjugate_inplace.cu  decode.cu  decryption.cu  encode.cu  encryption.cu  gpu_test_runner.py  mod_switch_plain_to_inplace.cu  mod_switch_to_inplace.cu  mod_switch_to_next_inplace.cu  multi.cu  multi_inplace.cu  multi_plain.cu  multi_plain_inplace.cu  negation.cu  negation_inplace.cu  relin.cu  relin_inplace.cu  rescale_to_next.cu  rescale_to_next_inplace.cu  rotation.cu  sub.cu  sub_inplace.cu  sub_plain.cu  sub_plain_inplace.cu
